--- a/form/index.html
+++ b/form/index.html
@@ -17,7 +17,9 @@
 
 	<body>
 		<form action="#" id="form">
-			<div>姓名：<input type="text" name="name" autofocus /></div>
+			<div>
+				用户名：<input type="text" class="name" name="name" autofocus />
+			</div>
 			<div>
 				<input type="radio" value="男" name="gender" checked />男
 				<input type="radio" value="女" name="gender" />女
